--- a/_posts/2023-03-17-PQ-尹錫悅達成日韓峰會必要條件-提著-徵用工解決方案-訪岸田文雄.html
+++ b/_posts/2023-03-17-PQ-尹錫悅達成日韓峰會必要條件-提著-徵用工解決方案-訪岸田文雄.html
@@ -16,7 +16,7 @@ author: 陳怡菱
 
 
 
-<p>這也是睽違 12 年韓國總統專程訪日，上一次是在 2011 年的李明博時期。而上一位訪日的韓國總統是在 2018 年的文在寅時期，配合國際會議 G20 大阪峰會，順道與安倍晉三前首相召開了領袖會談。</p>
+<p>這也是睽違 12 年韓國總統為兩國峰會專程訪日，上一次是在 2011 年的李明博時期。而上一次韓國總統訪日是在 2018 年的文在寅時期，配合在日本舉行的日中韓峰會，順道與安倍晉三前首相召開了領袖會談。</p>
 
 
 
@@ -84,4 +84,4 @@ author: 陳怡菱
 
 
 
-<p>參考新聞連結：<br><a href="https://www.sankei.com/article/20230316-63HQ5OD3JRJP5LCUNTGB3WS5DQ/" target="_blank" rel="noopener">2023/03/16　産経　日韓首脳会談　首相、徴用工解決策「健全な関係に戻す」と評価</a><br><a href="https://www.asahi.com/articles/ASR3J5DH4R3JUTFK019.html" target="_blank" rel="noopener">2023/03/16　朝日　韓国向け半導体の素材3製品、輸出規制強化の解除を発表　経産省</a><br><a href="https://www3.nhk.or.jp/news/html/20230316/k10014010181000.html" target="_blank" rel="noopener">2023/03/16　NHK　日本政府 韓国向け輸出管理解除へ 韓国もWTO提訴取り下げへ</a></p><p>The post <a href="https://pourquoi.tw/intlnews-neasia-230310-230316-2/">尹錫悅達成日韓峰會必要條件　提著「徵用工解決方案」訪岸田文雄</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考新聞連結：<br><a href="https://www.sankei.com/article/20230316-63HQ5OD3JRJP5LCUNTGB3WS5DQ/" target="_blank" rel="noopener">2023/03/16　産経　日韓首脳会談　首相、徴用工解決策「健全な関係に戻す」と評価</a><br><a href="https://www.asahi.com/articles/ASR3J5DH4R3JUTFK019.html" target="_blank" rel="noopener">2023/03/16　朝日　韓国向け半導体の素材3製品、輸出規制強化の解除を発表　経産省</a><br><a href="https://www3.nhk.or.jp/news/html/20230316/k10014010181000.html" target="_blank" rel="noopener">2023/03/16　NHK　日本政府 韓国向け輸出管理解除へ 韓国もWTO提訴取り下げへ</a><br><a href="https://m-jp.yna.co.kr/view/AJP20230316006700882" target="_blank" rel="noopener">2023/03/16　聯合ニュース　尹大統領　韓日問題「国内政治に利用しない」＝在日との食事会で</a><br></p><p>The post <a href="https://pourquoi.tw/intlnews-neasia-230310-230316-2/">尹錫悅達成日韓峰會必要條件　提著「徵用工解決方案」訪岸田文雄</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
