--- a/_posts/2023-03-17-PQ-盼多陪伴患病家人-林昶佐宣布放棄競選連任.html
+++ b/_posts/2023-03-17-PQ-盼多陪伴患病家人-林昶佐宣布放棄競選連任.html
@@ -12,7 +12,7 @@ author: 林 奕辰
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008.jpg" alt="" class="wp-image-130101" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008.jpg 855w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008-300x269.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008-768x690.jpg 768w" sizes="(max-width: 855px) 100vw, 855px" /><figcaption>林昶佐宣布放棄競選連任後，在立法院議場前接受訪問／圖：中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008.jpg" alt="" class="wp-image-130101" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008.jpg 855w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008-300x269.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/732aebcb-855x768_wmky_0_c20230317000008-768x690.jpg 768w" sizes="(max-width: 855px) 100vw, 855px" /><figcaption>林昶佐宣布放棄競選連任後，在立法院議場前接受訪問／圖：中央社</figcaption></figure></div>
 
 
 
