--- a/_posts/2023-03-17-INMEDIA-suck-channel-管理員7項煽惑罪成囚6年半-申請定罪上訴許可遭駁回.html
+++ b/_posts/2023-03-17-INMEDIA-suck-channel-管理員7項煽惑罪成囚6年半-申請定罪上訴許可遭駁回.html
@@ -8,11 +8,11 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/suck%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名27歲男子被指為 Telegram 頻道「SUCK Channel」擁有人及管理員，涉於2020年煽動製作汽油彈、癱瘓鐵路等，經審訊後被裁定「串謀煽惑他人犯暴動」等7罪成立，判囚6年半，為目前同類案最重判刑。他不服定罪申請上訴許可，今（17日）在高等法院聆訊，最後被上訴庭法官彭偉昌駁回。上訴人稱掌握到其他證據，於審訊期間曾提出，惟律政司指沒有。彭官指原審辯方大狀郭憬憲「經驗豐富、相當進取」，若真的曾提出，辯方理應會第一時間告知法庭。彭官建議上訴人翻聽審訊光碟，但提醒「你知律政司唔係唔勤力，如果佢最後發現你講大話、誤導法庭，就唔係幾好啦！」</p>
+<img src="https://www.inmediahk.net/files/column_images/suck%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名27歲男子被指為 Telegram 頻道「SUCK Channel」擁有人及管理員，涉於2020年煽動製作汽油彈、癱瘓鐵路等，經審訊後被裁定「串謀煽惑他人犯暴動」等7罪成立，判囚6年半，為目前同類案最重判刑。他不服定罪申請上訴許可，今（17日）在高等法院聆訊，最後被上訴庭法官彭偉昌駁回。上訴人稱掌握到其他證據，於審訊期間曾提出，惟律政司指沒有。彭官指原審辯方大狀郭憬憲「經驗豐富、相當進取」，若真的曾提出，辯方理應會第一時間告知法庭。彭官建議上訴人翻聽審訊光碟，但提醒：「你知律政司唔係唔勤力，如果佢最後發現你講大話、誤導法庭，就唔係幾好啦！」</p>
 <p>上訴人伍文浩（27歲），報稱電腦技術員。他今日沒有律師代表，早前曾申請法援不獲批，原因為其勝訴機會微。</p>
 <p><strong>法官指上訴人無指出原審官錯誤</strong></p>
 <p>上訴人的上訴理由包括，原審暫委法官許肇強於裁決時對關鍵事項缺乏考慮。惟上訴庭法官彭偉昌指出，上訴人只是重複原審時已提出的議題，他亦沒有指出原審法官所犯的錯誤。彭官對上訴人稱：「你話畀我聽佢點錯法先得㗎！」他認為原審法官在裁決時已有「好詳細分析」，同時有考慮環境證據，原審法官認為上訴人不可能不知頻道中有煽惑他人犯法的訊息，更裁定他與其他人有協議。</p>
-<p>另外，上訴人指該帳戶有4個登入裝置，彭官反駁這並非理據，又指專家已就有關方面解釋，「你唔接受無辦法」。他更認為原審法官已「過份公道地」將疑點利益歸於上訴人。</p>
+<p>另外，上訴人指該帳戶有4個登入裝置，彭官反駁這並非理據，又指專家已就有關方面解釋，「你唔接受無辦法。」他更認為原審法官已「過份公道地」將疑點利益歸於上訴人。</p>
 <p>上訴人亦認為，原審法官沒有考慮帳戶可能由其他人控制，彭官卻指上訴人身為管理員，容許他人發布涉案訊息已是有罪。</p>
 <p><strong>上訴人稱掌握其他證據 官指辯方經驗豐富應會提出</strong></p>
 <p>上訴人再提出，掌握到證據顯示他於案發後才安裝有關應用程式。彭官追問他在原審階段有否提出，上訴人稱有，但律政司一方指沒有。彭官指，原審的辯方大狀郭憬憲「經驗豐富、相當進取」，若上訴人真的曾提出上述理據，原審時辯方理應會第一時間告知法庭。</p>
@@ -24,4 +24,4 @@ author: 獨媒報導
 <p>他判刑時指，案發時香港面對多場大規模暴力衝突，涉案帖文加劇破壞社會安寧的風險；即使訊息並非由上訴人發佈，他擁有剔除帖文的權限，卻任由訊息廣傳，罪責無可推卸，判囚6年6個月。</p>
 <p>案件編號：CACC75/2022</p>
 <p>相關報導：<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E8%A2%AB%E6%8C%87%E7%82%BA%E3%80%8Csuck-channel%E3%80%8D%E7%AE%A1%E7%90%86%E5%93%A1-27%E6%AD%B2%E7%94%B7%E5%AD%907%E9%A0%85%E7%85%BD%E6%83%91%E7%BD%AA%E5%9B%9A6%E5%B9%B4%E5%8D%8A-%E5%90%8C%E9%A1%9E%E6%A1%88%E6%9C%80%E9%87%8D">被指為「SUCK Channel」管理員 27歲男子7項煽惑罪囚6年半 同類案最重</a><br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E8%A2%AB%E6%8C%87%E7%82%BA%E3%80%8Csuck-channel%E3%80%8D%E6%93%81%E6%9C%89%E4%BA%BA-26%E6%AD%B2%E7%94%B7%E5%AD%907%E9%A0%85%E4%B8%B2%E8%AC%80%E7%85%BD%E6%83%91%E7%BD%AA%E6%88%90?__cf_chl_tk=pfNI3SuYEaHKIEb285D6F2OIGsrN6hnYNehdogUr3d4-1679028969-0-gaNycGzNDuU">被指為「SUCK Channel」擁有人 26歲男子7項串謀煽惑罪成</a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
