--- a/_posts/2023-03-18-INMEDIA-中大擬拆教職員宿舍重建-古諮會不予評級-本研社-兩者不謀而合.html
+++ b/_posts/2023-03-18-INMEDIA-中大擬拆教職員宿舍重建-古諮會不予評級-本研社-兩者不謀而合.html
@@ -22,7 +22,7 @@ author: 獨媒報導
 <p>按照簡介書顯示的時間表，校方去年中選定大樓設計則師並開始設計，預料今年10月完成設計並招標興建，明年1月確定建築商及開始興建，2026年12月相繼落成學生宿舍及其他大樓設施。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/i59Cwibr86" title="螢幕擷取畫面 2023-03-15 231634"><img src="https://live.staticflickr.com/65535/52753949537_2920916245_b.jpg" width="1024" alt="螢幕擷取畫面 2023-03-15 231634" /></a><br /><em>簡介書圖片</em></p>
 <p><strong>古諮會上周傾宿舍擬議評級 終通過不獲評</strong></p>
-<p>崇基學院的官方頻道1月上載了<a href="https://www.youtube.com/watch?v=AGkQskA9U-Q">「E計劃——地點展示影片」</a>，片長約1分鐘，僅介紹有關計劃的位置；校方2月初亦在《經濟日報》刊登全版廣告推廣「E計劃」，内容較為詳細，列出擬興建的設施及募款目標等，但整體宣傳不多。古諮會上周四（9日）舉行會議，突然討論崇基教職員宿舍E座及F座的擬議評級。古蹟辦代表在簡介指，崇基學院在1956年遷至馬料水現址時，為減省教職員往返校園的時間，提出興建兩座宿舍，E座及F座先後於1965年及1966年落成。兩座大樓建築風格類同，南立面及北立面外牆以虎皮石砌成的毛石牆裝飾。</p>
+<p>崇基學院的官方頻道1月上載了<a href="https://www.youtube.com/watch?v=AGkQskA9U-Q">「E計劃——地點展示影片」</a>，片長約1分鐘，僅介紹有關計劃的位置；校方2月初亦在《經濟日報》刊登全版廣告推廣「E計劃」，内容較為詳細，列出擬興建的設施及募款目標等，但整體宣傳不多。古諮會上周四（9日）舉行會議，突然討論崇基教職員宿舍E座及F座的擬議評級。古蹟辦代表在簡介指，崇基學院在1956年遷至馬料水現址時，為減省教職員往返校園的時間，提出興建兩座宿舍，E座及F座先後於1965年及1966年落成。兩座大樓建築風格類同，南立面及北立面外牆均為毛石牆。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/191p2aorsa" title="無標題"><img src="https://live.staticflickr.com/65535/52747150863_261341eeaa_b.jpg" width="1024" alt="無標題" /></a><br /><em>教職員宿舍E座</em></p>
 <p>就其社會及組合價值，古蹟辦館長（歷史建築）盧傳倩表示，雖然建築位處大學站旁，惟遠離教學樓等其他校園主要設施，「偏處崇基學院一隅」，學院學生亦較少使用。她提到，兩座宿舍有較大幅度改動，地下的停車位分別改建作雜物房、咖啡室及接待處；大部分單位的露台設計亦有變，改用不銹鋼欄杆及玻璃圍板；室内空間用途亦變更，故經審視後建議不予評級。</p>
 <p>古諮會委員、建築師葉頌文表示，兩座宿舍建築保存尚算良好，部分樓層近年改建作學生共享空間，或非當局所述的與學生關係疏離；又稱如可運作多30年，屆時或可成為「學生回憶」。香港大學地理系客席教授李志苗則提到，校園尚有教職員A、B、C座宿舍，質疑當局逐棟評級，未有整全考慮整個校園，更問及校方是否有發展項目，惟古蹟辦無正面回應。委員最終通過兩座建築擬議「不予評級」，公眾可在一個月提交意見。</p>
