--- a/_posts/2023-03-18-INMEDIA-報販賣報日僅百份-賣煙為主加税收入大減.html
+++ b/_posts/2023-03-18-INMEDIA-報販賣報日僅百份-賣煙為主加税收入大減.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8w5X9s0DyJ" title="DSCF1696"><img src="https://live.staticflickr.com/65535/52750576009_94b5846d83_b.jpg" width="1024" alt="DSCF1696" /></a></p>
 <p>全港報販大聯盟表示，大幅增加煙草稅只會進一步拉遠完稅煙和走稅煙價格，並加速煙民投入私煙市場，令私煙問題更嚴重的私煙問題，扼殺報販生存空間。</p>
 <p><strong>增加煙税增資金周轉壓力  感覺「報販好似無乜人理」</strong></p>
-<p>報紙訂現時向代理訂購完稅煙，在取貨時需要先找數，增加煙草税隨之而來的是，對報販造成資金周轉壓力。耀嫂就認為，要食煙的人會繼續食，難以全面禁煙，更遑論透過加煙税作禁煙措施，「我哋報販好似無乜人理，加煙税無考慮我哋」。</p>
+<p>報紙檔現時向代理訂購完稅煙，在取貨時需要先找數，增加煙草税隨之而來的是，對報販造成資金周轉壓力。耀嫂就認為，要食煙的人會繼續食，難以全面禁煙，更遑論透過加煙税作禁煙措施，「我哋報販好似無乜人理，加煙税無考慮我哋」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/tXC3neL467" title="DSCF1633"><img src="https://live.staticflickr.com/65535/52750332711_db1792c318_b.jpg" width="1024" alt="DSCF1633" /></a></p>
 <p>耀哥與耀嫂自70年代一直經營報紙檔至今，這對老夫老妻年中無休，近年更24小時營業。報紙檔現址位於旺角道33號海途發展大廈的門口。很難想像，原址旁邊是一幢六層高的舊樓，門口是一間理髮店。</p>
 <p>耀哥多年前原從事出入口生意，但遇上經濟衰退，遂唯有轉行，朋友建議不如開報紙檔。理髮店老闆娘便喚耀嫂，「不如嚟我門口，唔好畀『咕哩』坐晒門口」，那時候還未有發牌制度，耀哥自行向代理商訂報。</p>
