--- a/_posts/2023-03-18-PQ-國際刑事法院發蒲亭逮捕令-締約國有義務配合.html
+++ b/_posts/2023-03-18-PQ-國際刑事法院發蒲亭逮捕令-締約國有義務配合.html
@@ -68,6 +68,10 @@ author: 陸 瑪丁
 
 
 
+<p>不過，由於 <strong>ICC 本身沒有警察，必須仰賴成員國警力</strong>，而法院對蒲亭發出逮捕令的實際影響，就在於逮捕令簽發之後，全球 123 個會員國都有逮捕蒲亭並移送海牙受審的義務。換言之，蒲亭從事國際旅行將因此大受威脅。前美國戰爭罪行問題無任所大使芮普（Stephen Rapp）表示，只要蒲亭出國，就有遭到逮捕的風險，這使他在國際上「形同賤民」。</p>
+
+
+
 <h2>習將訪俄前公布逮捕令　ICC院長：檢察官獨立辦案</h2>
 
 
@@ -88,7 +92,15 @@ author: 陸 瑪丁
 
 
 
+<p>耶魯大學上個月發表的一項報告指稱，俄羅斯在至少 43 個設施裡關押 6,000 多名烏克蘭兒童，烏克蘭公布的數據則稱被非法轉移到俄羅斯境內（或俄羅斯佔領的烏克蘭領土）的烏克蘭兒童已超過 16,000 名。不過俄羅斯並不隱瞞這些舉措，反而大張旗鼓宣稱這是人道主義行動，目的在保護衝突地區的孤兒與棄兒。</p>
+
+
+
 <div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/d6b9b17b-於赫松發現的兒童虐待室。（圖／twitter＠defenceofu）-1024x682.jpeg" alt="" class="wp-image-123132" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/d6b9b17b-於赫松發現的兒童虐待室。（圖／twitter＠defenceofu）-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/d6b9b17b-於赫松發現的兒童虐待室。（圖／twitter＠defenceofu）-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/d6b9b17b-於赫松發現的兒童虐待室。（圖／twitter＠defenceofu）-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/d6b9b17b-於赫松發現的兒童虐待室。（圖／twitter＠defenceofu）.jpeg 1280w" sizes="(max-width: 594px) 100vw, 594px" /><figcaption>本次逮捕令，是針對烏克蘭兒童在境內，被驅逐到俄國的所構成的戰爭罪。<br>圖為於赫松發現的兒童虐待室。（圖／twitter＠defenceofU）</figcaption></figure></div>
+
+
+
+<p>在蒲亭之前，國際刑事法院也曾對國家元首發出逮捕令，分別是利比亞軍事強人格達費（Muammar Gaddafi），以及蘇丹前總統巴席爾（Omar al-Bashir）。巴席爾在 2019 年蘇丹政變時被捕，因洗錢貪污等罪名入獄服刑兩年。2020 年，蘇丹政府同意將席爾巴移送國際刑事法院接受戰爭罪審判，目前案件還在預審階段（被告尚未到案）。</p>
 
 
 
