--- a/_posts/2023-03-21-INMEDIA-小熊維尼-血與蜜-疑被禁上映-包場活動取消-預售連結無效.html
+++ b/_posts/2023-03-21-INMEDIA-小熊維尼-血與蜜-疑被禁上映-包場活動取消-預售連結無效.html
@@ -9,6 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_505.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>由英國導演里斯．弗雷克沃特菲爾德製作的恐怖電影《小熊維尼：血與蜜》，擬於本周四（23日）在港上映，惟有放映活動搞手表示，原安排在周二晚舉行的《小熊維尼》包場活動，基於「技術原因」要取消。而原本已預售的戲院，也停止了發售該片的戲票。《獨媒》正向發行商及電檢處查詢事件。</p>
+<p><font color="blue">【1933更新】</font>發行商VII Pillars Entertainment 今日傍晚發聲明，確認《小熊維尼：血與蜜》將取消在香港及澳門地區上映。公司就電影未能上映與影迷致歉，稱未來仍會持續尋找質量優良、獨具特色的電影，為影迷提供更多選擇。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M416Q6C7Ge" title="螢幕截圖 2023-03-21 上午11.22.54"><img src="https://live.staticflickr.com/65535/52761296949_261d73eb12_z.jpg" alt="螢幕截圖 2023-03-21 上午11.22.54" /></a><br /><em>今早11時，WMOOV仍顯示新光數碼戲院有放映場次，惟有關資料至11時半已經消失。</em></p>
 <p><strong>記者今日成功購票  5分鐘後連結消失</strong></p>
 <p>在電影資訊平台WMOOV，雖仍能搜尋到電影資料，但只有新光數碼戲院有23日至29日的放映場次。《獨媒》記者今早11時03分進入戲院網站，成功購得兩張戲飛。惟在早上11時08分再次進入網站，電影場次資訊及購票連結已經消失。</p>
