--- a/_posts/2023-03-21-INMEDIA-涉燈柱貼-真嘢唔怕講-貼紙-中大生認刑毀罰8千元-自行求情指-沒有理由噤聲.html
+++ b/_posts/2023-03-21-INMEDIA-涉燈柱貼-真嘢唔怕講-貼紙-中大生認刑毀罰8千元-自行求情指-沒有理由噤聲.html
@@ -8,16 +8,16 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/03211335-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名中大政治及行政系三年級生，涉去年六四在旺角交通燈柱張貼「真嘢唔怕講」貼紙。他否認刑事損壞罪，案件原定今（21日）在西九龍裁判法院開審，但他改為認罪，被判罰款8千元。辯方進行部分求情後，透露被告希望解僱律師自行求情，裁判官曾慶東批評被告：「你而家上嚟唔係做表演」。被告最後解僱律師，自行求情指：「只要克服恐懼，沒有東西是不能說的：政權如果得民心，亦沒有理由懼怕任何言論。面對小小代價，我更沒有理由噤聲」。</p>
+<img src="https://www.inmediahk.net/files/column_images/03211335-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名中大政治及行政系三年級生，涉去年六四在旺角交通燈柱張貼「真嘢唔怕講」貼紙。他否認刑事損壞罪，案件原定今（21日）在西九龍裁判法院開審，但他改為認罪，被判罰款8千元。辯方進行部分求情後，透露被告希望解僱律師自行求情，裁判官曾慶東批評被告：「你而家上嚟唔係做表演。」被告最後解僱律師，自行求情指：「只要克服恐懼，沒有東西是不能說的：政權如果得民心，亦沒有理由懼怕任何言論。面對小小代價，我更沒有理由噤聲。」</p>
 <p>被告關靖豐（21歲，中大政政系三年級生），承認一項刑事損壞罪。被告認罪後，辯方指昨晚6時才收到控方提供警員視察清潔工清理貼紙的供詞，由於有涉及損毀的新增證據，因此被告決定改為認罪，並希望獲三分一扣減。惟裁判官曾慶東卻不同意這是改變答辯的理由。最後辯方撤回陳詞。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8U1203BJ7T" title="被告關靖豐"><img src="https://live.staticflickr.com/65535/52761629033_ecc14f3f9b_b.jpg" width="1024" alt="被告關靖豐" /></a><br /><em>被告關靖豐</em></p>
 <p><strong>被告解僱律師自行求情 官一度指「而家唔係表演」</strong></p>
-<p>另外，辯方透露被告指示其大狀毋須為他求情，他決定自行求情。曾官隨即批評：「被告人你而家上嚟唔係做表演，唔該你諗清楚！有規矩㗎法庭，唔係你想點就點，唔係呢部分要律師，嗰部分唔要。表演呀被告人你而家上嚟？」。被告一度面露微笑，曾官嚴肅問：「你對住邊個笑呀？」，被告將手伸向前。曾官逐指：「本來你認罪係一個好嘅開始嚟！」。其後他要求休庭讓辯方再向被告索取指示。</p>
+<p>另外，辯方透露被告指示其大狀毋須為他求情，他決定自行求情。曾官隨即批評：「被告人你而家上嚟唔係做表演，唔該你諗清楚！有規矩㗎法庭，唔係你想點就點，唔係呢部分要律師，嗰部分唔要。表演呀被告人你而家上嚟？」被告一度面露微笑，曾官嚴肅問：「你對住邊個笑呀？」被告將手伸向前。曾官遂指：「本來你認罪係一個好嘅開始嚟！」其後他要求休庭讓辯方再向被告索取指示。</p>
 <p><strong>被告求情：發聲本身證明真嘢可以唔怕講</strong></p>
 <p>被告最後決定解僱律師並自行求情，他讀出預備好的稿詞。其求情全文如下：</p>
-<p>我們所熟悉的香港面貌，其實不能缺少塗鴉和街招，而執法部門其實也無可能杜絕控方眼中的「刑毀」。那麼警方為何要嘥心機，拿13段影片證明我貼了18張貼紙呢？無非是因為案發日期是6月4日。</p>
+<blockquote><p>我們所熟悉的香港面貌，其實不能缺少塗鴉和街招，而執法部門其實也無可能杜絕控方眼中的「刑毀」。那麼警方為何要嘥心機，拿13段影片證明我貼了18張貼紙呢？無非是因為案發日期是6月4日。</p>
 <p>但請法庭不要誤會，驅使我寫字、貼紙的，並不是因為我記掛在中國發生的民運，亦不是想煽動任何人。而是因為我在2022年的香港感到無比壓抑。二零年後的香港，香港人最實在感受到的，可能是空虛同缺失：香港缺失集會，缺失民間領袖，政治犯被逼從親友身邊離去；最多人說的，是「有咩唔講得」。</p>
-<p>但事實上，只要克服恐懼，沒有東西是不能說的：政權如果得民心，亦沒有理由懼怕任何言論，面對小小代價，我更沒有理由噤聲，發聲本身更證明真嘢可以唔怕講嘅。因此我沒有理由後悔。</p>
+<p>但事實上，只要克服恐懼，沒有東西是不能說的：政權如果得民心，亦沒有理由懼怕任何言論，面對小小代價，我更沒有理由噤聲，發聲本身更證明真嘢可以唔怕講嘅。因此我沒有理由後悔。</p></blockquote>
 <p>控方指毋須申請賠償令。其後曾官問及被告的背景，被告指他現年21歲，正就讀中大政治及行政學系三年級。現時與母親及兩弟同住，他有做零售兼職賺取生活費。曾官問到他日後有何打算，他指沒有打算，並稱「到時先算啦」。</p>
 <p><strong>官相信被告因政治看法犯案</strong></p>
 <p>曾官判刑時指，被告即時認罪及初犯，聽取求情後相信他受社會氛圍，以及因政治上的看法而犯案，但被告對其行為不感後悔，曾官希望被告在事件中得到教訓，最後判罰款8千元。</p>
@@ -28,4 +28,4 @@ author: 獨媒報導
 <p>控罪指被告於2022年6月4日在香港，無合法辯解而損壞屬於香港特區政府的財產，即一個街道牌、兩枝燈柱、4枝交通燈柱及7個交通標誌，意圖損壞該財產或罔顧該財產是否會被損壞。</p>
 <p>案件編號：WKCC3196/2022</p>
 <p>相關報導：<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%B6%89%E8%A1%97%E9%81%93%E7%89%8C%E7%87%88%E6%9F%B1%E8%B2%BC%E5%85%AD%E5%9B%9B%E8%B2%BC%E7%B4%99-%E4%B8%AD%E5%A4%A7%E4%BA%8C%E5%B9%B4%E7%B4%9A%E7%94%9F%E5%90%A6%E8%AA%8D%E5%88%91%E4%BA%8B%E6%90%8D%E5%A3%9E-3%E6%9C%88%E9%96%8B%E5%AF%A9">涉街道牌燈柱貼六四貼紙 中大二年級生否認刑事損壞 3月開審</a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
