--- a/_posts/2023-03-21-INMEDIA-政府擬修訂-保護海港條例-豁免清單獲司長批准即可填海-本研社-內部制衡令人難信服.html
+++ b/_posts/2023-03-21-INMEDIA-政府擬修訂-保護海港條例-豁免清單獲司長批准即可填海-本研社-內部制衡令人難信服.html
@@ -23,20 +23,20 @@ author: 獨媒報導
 <p>另外，本土研究社認為，政府以2004及2008年的判決解釋修例理據，為不尊重法庭判決，亦有「行政權凌駕法院判決」之嫌，認為政府豁免原本法例禁止的行為，是以修改法例擴大行政機關權力。本土研究社亦批評政府在文件中舉出數個可能受惠於修訂《條例》的公共工程，是誤導公眾以為豁免只限於公共工程，惟事實上修例「無差別豁免」公共和私人工程，文件當中亦無解釋為何私人海濱工程無須證明具「凌駕性公眾需要」。</p>
 <p>本土研究社亦質疑政府修例是為明日大嶼填海的法理障礙鋪路，當明日大嶼須在維港範圍內建接駁大橋至港島，修例後可令明日大嶼繞過凌駕性公眾需要的要求。而3公頃的臨時填海，對海港造成的影響已可以很大，雖然是臨時性質，但如此佔地面積不應在豁免之列。</p>
 <p>擬獲豁免工程清單：</p>
-<blockquote><p>(1) 海濱長廊(promenade)和行人板道(boardwalk)<br />
-(2) 單車徑(cycle track)<br />
-(3) 浮躉(floating pontoons)<br />
-(4) 海岸台階(harbour steps)<br />
-(5) 海岸泳池(harbour pool)<br />
-(6) 觀景台(viewing deck)<br />
-(7) 碼頭(pier）<br />
-(8) 登岸台階(landing steps)<br />
-(9) 滑道(slipway)<br />
-(10) 船隻停泊處(mooring)<br />
-(11) 避風塘(typhoon shelter)<br />
-(12) 防波堤(breakwater)<br />
-(13) 海堤(seawall)<br />
+<blockquote><p>(1) 海濱長廊（promenade）和行人板道（boardwalk）<br />
+(2) 單車徑（cycle track）<br />
+(3) 浮躉（floating pontoons）<br />
+(4) 海岸台階（harbour steps）<br />
+(5) 海岸泳池（harbour pool）<br />
+(6) 觀景台（viewing deck）<br />
+(7) 碼頭（pier）<br />
+(8) 登岸台階（landing steps）<br />
+(9) 滑道（slipway）<br />
+(10) 船隻停泊處（mooring）<br />
+(11) 避風塘）typhoon shelter）<br />
+(12) 防波堤（breakwater）<br />
+(13) 海堤（seawall）<br />
 (14) 支援漁業海上營運的設施，包括賣水站及賣油站<br />
 (15) 應對極端氣候風險的裝置<br />
-(16) 《2022 年發展（城市規劃、土地和工程）（雜項修正 案）法案》建議添加到《填海條例》附表中指定的 項目 3 。</p></blockquote>
+(16) 《2022 年發展（城市規劃、土地和工程）（雜項修正 案）法案》建議添加到《填海條例》附表中指定的 項目3 。</p></blockquote>
 </div></div></div>
