Update VOCUS 2023-03-22 patch

--- a/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-4-實戰-情報傳遞遲緩的慘劇.html
+++ b/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-4-實戰-情報傳遞遲緩的慘劇.html
@@ -40,7 +40,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">俄軍被伏擊的車隊規模都不會很大，屬於連級規模，前後就是幾百公尺的長度，當前後車輛被擊毀，周圍都是樹林，感覺四面八方都有攻擊，躲哪裡都不是，裝甲車前進無門後退無路，一離開道路就是陷入爛泥中，換你是士兵會怎麼辦？恐慌會促使你依照本能棄車逃亡，爛泥巴說爛，那是對裝甲車而言，穿軍靴的士兵要通過倒是還好。</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/28c30e2d-af54-4831-b35a-e25533e220f7.png" data-width="980" data-height="657" data-position="center" src="https://images.vocus.cc/28c30e2d-af54-4831-b35a-e25533e220f7.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">王立：大概這種感覺，車隊士兵會不了解前後狀況，感覺四面八方都有敵軍</figcaption></div></figure>
 <div class="draft-block draft--p left">這也是在烏東的進攻，只要地面狀況良好，俄軍能夠把裝甲部隊展開的攻勢，烏克蘭都很辛苦、幾乎都吃敗仗的理由，也是為何高地、城鎮是兵家必爭之地的原因。只要離開這些地形，面對一整排的坦克，自己拿不出反擊的火力就是找死。而在自家地形熟悉的地方，我方坦克還可以一個打十個，好幾個流出的影片都能證明，俄軍進入不熟悉的城鎮，連被烏軍坦克偷襲哪邊都不知道。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/6Npz_sVvNw4"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/6Npz_sVvNw4"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">註：這裡指的是俄國2015年把空軍跟太空防衛軍合併後的<a href="https://zh.wikipedia.org/zh-tw/%E4%BF%84%E7%BD%97%E6%96%AF%E7%A9%BA%E5%A4%A9%E5%86%9B" target="_blank" class="draft--a">航空太空軍</a>，作者為了不讓軍普文章的名詞過度複雜，所以沿用傳統空軍的稱呼，此系列文後同。</div>
