--- a/_posts/2023-03-19-VOCUS-終極生還組-在零下荒野求生存.html
+++ b/_posts/2023-03-19-VOCUS-終極生還組-在零下荒野求生存.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">因為一些意外的獲勝模式，讓這部野外求生實境節目難得獲得熱度，也引起討論點。但是負面評價隨即而來。製作人在是後的訪談中有提到：他的確想像有類似團員忠誠度（參賽選手可以自由的更換隊伍），或是像力求自保與一些狀況發生。</div>
 <div class="draft-block draft--p left">但沒想到會在他們看不見的地方，意外的引出參賽者的惡意，這個方式是過去在求生遊戲中較沒有的現實面。</div>
 <div class="draft-block draft--p left">這也使網上討論分成支持和反對兩派，有人認為這就是人性與想獲勝的渴望，規則中並未限制這點。但有些人不認同比賽有著這樣的局面，認為這不符合運動家精神和競賽本質。而不管如何節目收穫了許多討論度，並且也展現出來，就證明製作組認同這是一個賣點，雖然事情擴大成變成對參賽者的討伐，但捫心自問當人在極地時有著求生慾望的當下，這種決定正確於否，恐怕不是言語攻擊而能有結果的。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/mQ4a-H5wvPM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/mQ4a-H5wvPM"></iframe></div>
