--- a/_posts/2023-03-21-VOCUS-逆者-33歲才格鬥的台灣選手.html
+++ b/_posts/2023-03-21-VOCUS-逆者-33歲才格鬥的台灣選手.html
@@ -46,4 +46,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">我認為這部記錄電影拍攝手法太像是選手廣告片，雖然我覺得導演或選手不是刻意用這種方向去製作，但是整體的感覺太像是一位運動員推廣行銷自己的電影紀錄片，這可能是因為整部片將黃育仁詮釋的過於完美的形象。這裡並非說沒有拍攝他的失敗與阻力，而是紀錄片中過度的渲染他的努力與認真的形象，讓我覺得這讓黃育仁變成很不真實的廣告片男主角。</div>
 <div class="draft-block draft--p left">這部紀錄片並非拍攝不好，而是少了可期待部分。你所想像得到的格鬥選手的生活，基本在電影中都被實踐，作為一個鼓勵人心的格鬥紀錄它沒有問題，但電影中少了很多延伸與可以更深層探索的故事，點到為止，少了許多讓人想追究後續的環節。</div>
 <div class="draft-block draft--p left">其中我不喜歡影片中不斷以我追夢這個展現句點觀眾，直到最後依舊是這個論點，使電影讓人生膩，簡單來說《逆者》電影過於聚焦黃育仁那單一追逐夢想的面相，沒有延伸反而讓這個格鬥故事無趣。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/2G_CAtU4_Wg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/2G_CAtU4_Wg"></iframe></div>
