--- a/_posts/2023-03-22-INMEDIA-民研-政府評分與福利關係不大-港人較重視民主-新聞言論自由.html
+++ b/_posts/2023-03-22-INMEDIA-民研-政府評分與福利關係不大-港人較重視民主-新聞言論自由.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/202303223.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>中共二十大後，官方不時強調香港進入由治及興「新時代」，香港民意研究所今日發布「一國兩制25周年民情總結」，結果顯示港人最重視「民主自由」、「言論自由」和「新聞自由」，三者的評分愈高，對政府滿意度愈高。相反，官方不時提到「幸福感」和「獲得感」，研究卻反映「福利」與政府管治好壞評價的關係不大。學者預料「民主」仍是未來政治和憲制爭議焦點，社會是否進一步撕裂，取決於政府只是照顧支持者，抑或修補對立關係。</p>
 <p>是次研究分析1997至2023年所收集的「政府民望」及「社會指標」數據，了解市民對特區政府表現的滿意程度與各項社會指標評分之間的關係。結果顯示，全部25項「社會指標」與「政府表現」存正向關係，即相關指標評分愈高，對政府滿意度愈高，而當中最高的五項指標分別為 「民主指標」、「新聞自由」、「言論自由」、「出版自由」和「公平指標」。</p>
 <p><strong>高中生關心政治 回歸多年不變</strong></p>
-<p>社工學者陳家傑指 ，以上結果反映市民的公民意識有加強，而增加的幅度顯示市民對新聞、出版自由更加關注。他又指，「民主指標」與政府施政滿意程度的相關系數持上升趨勢，與近期的「半數港人想走英語差都外流」的調查結果一致，可見高中生仍然關心政治。</p>
+<p>社工學者陳家傑指 ，以上結果反映市民的公民意識有加強，而增加的幅度顯示市民對新聞、出版自由更加關注。他又指，「民主指標」與政府施政滿意程度的相關系數持上升趨勢，<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E9%80%BE%E5%8D%8A%E4%BA%BA%E7%A8%B1%E5%9B%A0%E6%94%BF%E6%B2%BB%E7%92%B0%E5%A2%83-%E8%80%83%E6%85%AE%E5%88%B0%E6%B5%B7%E5%A4%96%E5%8D%87%E5%AD%B8%E6%88%96%E5%B7%A5%E4%BD%9C">與近期的「半數港人想走英語差都外流」的調查結果一致</a>，可見高中生仍然關心政治。</p>
 <p>至於政府經常在《青年發展藍圖》提倡加強青年參與公共事務和強化「主人翁意識」。陳家傑認為，青年的意見被制度接納並成功改變社區，才能建立他們的「主人翁意識」，建議政府讓青少年參與區議會，「我都好希望政府喺嗰個青年嘅地區參與裏面，喺區議會嘅舊架構裏面真真實實咁能夠俾青年參與」。他又認為，較有權力的政黨應容納一些對施政不滿和有意見的青少年。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/mpV59Ee5K9" title="無標題"><img src="https://live.staticflickr.com/65535/52764069659_f842f749bc_b.jpg" alt="無標題" /></a><br /><em>陳家傑（左）、李敏剛（右）</em></p>
 <p><strong>民主仍是政治爭議的焦點 社會兩極化為政府未來挑戰 </strong></p>
