--- a/_posts/2023-03-23-INITIUM-是她-他-还是gender-x-一张证明不到跨性别人士身分的香港身分证.html
+++ b/_posts/2023-03-23-INITIUM-是她-他-还是gender-x-一张证明不到跨性别人士身分的香港身分证.html
@@ -8,8 +8,8 @@ tags: blog
 author: 特约撰稿人 郑淑华 发自香港
 ---
 
-<p>「“这些事牵涉到我们的生活，长远点讲，是我们的青春、生活质素。”」</p><p>特约撰稿人 郑淑华 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230324-hongkong-transgender-non-binary-and-their-hkid-card/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/3c474fe95254497591fbd96341d13668.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="原生性别是女的海仔，在身份证的套上写上「请叫我男性」。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">原生性别是女的海仔，在身份证的套上写上「请叫我男性」。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption></figure><p><small>【编者按】不久前，日本演员桥本爱在社交平台发言，称在女浴室见到生理异性感到“恐怖”，再次引发有关跨性别权益的讨论。近年来，从JK罗琳关于跨性别的争议性发言、Elliot Page等跨性别明星出柜，到无性别卫生间倡导、性别重置手术与性别的制度认定等政治权益争取，跨儿群体在被更多看到的同时，也伴随著诸多犹疑与不理解。到底，性别是什么？</small></p>
+<p>「“这些事牵涉到我们的生活，长远点讲，是我们的青春、生活质素。”」</p><p>特约撰稿人 郑淑华 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230324-hongkong-transgender-non-binary-and-their-hkid-card/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/3c474fe95254497591fbd96341d13668.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="原生性别是女的海仔，在身份证的套上写上「请叫我先生」。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">原生性别是女的海仔，在身份证的套上写上「请叫我先生」。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption></figure><p><small>【编者按】不久前，日本演员桥本爱在社交平台发言，称在女浴室见到生理异性感到“恐怖”，再次引发有关跨性别权益的讨论。近年来，从JK罗琳关于跨性别的争议性发言、Elliot Page等跨性别明星出柜，到无性别卫生间倡导、性别重置手术与性别的制度认定等政治权益争取，跨儿群体在被更多看到的同时，也伴随著诸多犹疑与不理解。到底，性别是什么？</small></p>
 <p><small>跨性别权益与公共空间为何争议不断？顺性别女性担忧的对象究竟是谁？跨儿群体在经历怎样的药物与性别认同的挣扎？一张更改不了性别的身分证增加了多少生活困难？改变性别的制度认定为何障碍重重？</small></p>
 <p><small>3月31日国际跨性别现身日前后，端传媒组建“跨儿现身”专题，我们将讲述具体的生命故事，也将开展顺性别人士与跨儿的对话。我们试图在争议的漩涡中搭建一个平台，解构恐惧与不理解的不同切面，打开跨性别群体生存境况的透明柜子。</small></p>
 <p><small>今天是专题的第二篇：《跨性别人士在香港》</small></p>
