--- a/_posts/2023-03-24-PQ-弊大於利下的妥協-美國對半導體在中國投資限制比韓國預期寬鬆.html
+++ b/_posts/2023-03-24-PQ-弊大於利下的妥協-美國對半導體在中國投資限制比韓國預期寬鬆.html
@@ -16,7 +16,7 @@ author: 林貝利
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966.png" alt="" class="wp-image-118824" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966.png 960w, https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966-300x200.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966-768x512.png 768w" sizes="(max-width: 960px) 100vw, 960px" /><figcaption>SK海力士的記憶體晶片。<br>（圖／路透社／中央社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966.png" alt="" class="wp-image-118824" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966.png 960w, https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966-300x200.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/10/acacacb4-da37103f-8a42-492e-b883-cf93c84a3966-768x512.png 768w" sizes="(max-width: 960px) 100vw, 960px" /><figcaption>SK海力士的記憶體晶片。<br>（圖／路透社／中央社）</figcaption></figure>
 
 
 
