--- a/_posts/2023-03-24-PQ-國家安全中的通訊韌性-海底電纜的脆弱性與台灣因應之道.html
+++ b/_posts/2023-03-24-PQ-國家安全中的通訊韌性-海底電纜的脆弱性與台灣因應之道.html
@@ -17,7 +17,7 @@ author: 陳怡菱
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-4-3 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Shark attack on subcable.wmv" src="https://www.youtube.com/embed/1ex7uTQf4bQ?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe loading="lazy" title="Shark attack on subcable.wmv" src="https://www.youtube.com/embed/1ex7uTQf4bQ?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div><figcaption>鯊魚真的會咬海底電纜！</figcaption></figure>
 
 
@@ -50,7 +50,7 @@ author: 陳怡菱
 
 
 
-<p>網路防衛意識較高的英國，有在驗證海軍切斷英國海底電纜的風險。英國海軍認為俄羅斯海軍偵查船「揚塔爾號（Yantar）」配有可以切斷英國海底電纜的設備，於是在 2021 年 3 月宣佈要打造防護海底電纜的「監視船」。名為「多功能海洋監視船（Multi-Role Ocean Surveillance Ship, MROSS）」的沿海巡邏船，將會配有 15 名船員、收集數據用的感測器以及自主水下無人機，主要任務除了保護英國的海底電纜以及天然氣管線之外，也能支援其他包含在北極等地的防禦性任務。</p>
+<p>網路防衛意識較高的英國，有在驗證海軍切斷英國海底電纜的風險。英國海軍認為俄羅斯海軍偵查船「揚塔爾號（Yantar）」配有可以切斷英國海底電纜的設備，於是在 2021 年 3 月宣佈要打造防護海底電纜的「監視船」。名為「多功能海洋監視船（Multi-Role Ocean Surveillance Ship, MROSS）」的沿海巡邏船，配有 15 名船員、收集數據用的感測器以及自主水下無人機，主要任務除了保護英國的海底電纜以及天然氣管線之外，也能支援其他包含在北極等地的防禦性任務。</p>
 
 
 
