--- a/_posts/2023-03-24-INMEDIA-hkwalls-2023-20組壁畫作品散落中上環-藝術家-城市壓力太大-盼帶來快樂.html
+++ b/_posts/2023-03-24-INMEDIA-hkwalls-2023-20組壁畫作品散落中上環-藝術家-城市壓力太大-盼帶來快樂.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/walls%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>因疫情暌違一年的街頭藝術節HKwalls回歸，來自海外和本地共20組藝術家在中西區製作大型壁畫，散布在大街小巷的不同角落。有參展的本地藝術家以作品慶祝毋須再戴口罩後，能呼吸新鮮空氣和展露笑容的喜悦；她亦希望其創作能帶來快樂：「喺香港人人都好大壓力，城市好繁忙，希望啲人見到幅畫可以Relax下、輕鬆下。」</p>
+<img src="https://www.inmediahk.net/files/column_images/walls%201280_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>因疫情暌違一年的街頭藝術節HKwalls回歸，來自海外和本地共20組藝術家在中西區製作大型壁畫，散布在大街小巷的不同角落。有參展的本地藝術家以作品慶祝毋須再戴口罩後，能呼吸新鮮空氣和展露笑容的喜悦；她亦希望其創作能帶來快樂：「喺香港人人都好大壓力，城市好繁忙，希望啲人見到幅畫可以Relax下、輕鬆下。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1S411k68jc" title="無標題"><img src="https://live.staticflickr.com/65535/52766577068_577c081f01_b.jpg" width="1024" alt="無標題" /></a><br /><em>本地藝術家Mooncasket</em></p>
 <p><em>捷克、德國等6名海外藝術家參與</em></p>
 <p>隨社會復常，不少藝術活動相繼復辦。第8屆街頭藝術及壁畫節HKwalls於3月18至26日舉行，主辦方邀請本地及六名海外藝術家創作大型壁畫，包括Innerfields、Koga one及Jurne等，作品分布在中上環半山區。主辦方亦在上環Soho House 「HKwalls Hub」舉辦公眾展覽，並舉行工作坊及公眾導賞團等。</p>
