--- a/_posts/2023-03-24-INMEDIA-港協批冰協管治-講咗當做咗-下周將向政府提交報告.html
+++ b/_posts/2023-03-24-INMEDIA-港協批冰協管治-講咗當做咗-下周將向政府提交報告.html
@@ -20,4 +20,7 @@ author: 獨媒報導
 <p>今次播錯國歌事件一波三折，港協暨奧委會起初指冰協有跟隨指引，向主辦方提供正確版本國歌，但兩日後又改口指摘冰協未有按指引，索取正確版本國歌區旗工具包，要求冰協提交報告及解釋未有執行指引的原因。警方有組織罪案及三合會調查科亦調查事件。</p>
 <p>在冰協提交書面報告後，港協暨奧委會指冰協「避而不答」，在賽前未有核對國歌版本，亦未有交代有否向主辦機構提供國歌。冰球港隊領隊關婉儀及後稱，同事在出發前已將國歌連結發送予國際冰聯及波黑冰球協會，更將國歌下載到手提電話以便即場核對，但到場後卻找不到相關人士。</p>
 <p>被問到冰球港隊領隊關婉儀曾稱感到無辜，楊祖賜就稱，港隊以中國香港國歌比賽，如果出錯就覺得無辜，「我相信大家都知道答案係邊樣先啱」。他續指，現時已有45個體育總會向港協索取含國歌檔案的工具包，當中沒有任何問題，不認有需要修改《香港運動員及隊伍參與國際體育賽事期間處理播放國歌和升掛區旗的指引》。</p>
+<p><strong>港協下午再發聲明：冰協補充報告仍屬「片面之詞」</strong></p>
+<p>港協暨奧委會下午再發聲明，提到董事局認為冰協對有否遵從相關《指引》規定處理國歌，在補充報告的回應仍屬「片面之詞」，指若冰協有遵從《指引》，可避免事件發生。港協亦重申曾多次聯絡冰協執委會，並要求交代詳情及會面，但除冰協領隊回應傳媒查詢外，對方一直沒有正面答覆，反映執委對國歌和事件的重視程度嚴重不足。</p>
+<p>聲明亦再批評冰協管治「亟待改善」，認為冰協執委會明顯缺乏分工和監察，內部甚至缺乏溝通，以致冰協主席在領隊未完成海外賽事回港前，對播放國歌出錯事件掌握甚少，無法回應查詢，港協斥情況極不理想。</p>
 </div></div></div>
