--- a/_posts/2023-03-24-INMEDIA-長沙灣潤發貨倉三級火-鄰近學校及屋苑逾1,600人疏散.html
+++ b/_posts/2023-03-24-INMEDIA-長沙灣潤發貨倉三級火-鄰近學校及屋苑逾1,600人疏散.html
@@ -8,15 +8,18 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202303242.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>長沙灣發祥街1號潤發貨倉下午1時49分，21分鐘後升為三級。現場傳出惡臭的氣味，不斷有濃煙湧出，在場警員亦戴上防毒面罩。附近兩間學校學生及屋苑居民需疏散，涉及逾1,600人。截至下午四時，消防仍在現場撲救。</p>
+<img src="https://www.inmediahk.net/files/column_images/202303242.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>長沙灣發祥街1號潤發貨倉下午1時49分，21分鐘後升為三級。現場傳出惡臭的氣味，不斷有濃煙湧出，在場警員亦戴上防毒面罩。附近四間學校學生及屋苑居民需疏散，涉及逾1,600人。截至下午四時，消防仍在現場撲救，有兩名工人受傷。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/A47388B563" title="IMG_9851"><img src="https://live.staticflickr.com/65535/52768074563_7b771a6dcf_b.jpg" width="1024" alt="IMG_9851" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/n583Cc5Li7" title="IMG_9863"><img src="https://live.staticflickr.com/65535/52768025665_91a16d6b18_b.jpg" alt="IMG_9863" /></a></p>
-<p>長沙灣發祥街1號潤發貨倉下午1時49分發生火警，消防在下午2時10分將火警升為三級。消防動用一條喉及一隊煙帽隊灌救。前深水埗區議會主席楊彧現場目擊表示，倉內湧出黃綠色的氣體，籲附近的市民關上門窗。消防及後增至兩條喉及兩隊煙帽隊灌救。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/B6jyQe8006" title="IMG_9876"><img src="https://live.staticflickr.com/65535/52768151608_1f0ae961a3_b.jpg" width="1024" alt="IMG_9876" /></a></p>
+<p>長沙灣發祥街1號潤發貨倉下午1時49分發生火警，消防在下午2時10分將火警升為三級。消防動用一條喉及一隊煙帽隊灌救。<a href="https://www.facebook.com/hoilai.yuk/posts/pfbid0bYN1uqe5jFQTDCig2BvuNfjAo6MndwV7DAGJ2zqrBEBDFcDitnbjbLPCbLLr1MLSl">前深水埗區議會主席楊彧現場目擊表示</a>，倉內湧出黃綠色的氣體，籲附近的市民關上門窗。消防及後增至兩條喉及兩隊煙帽隊灌救。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3629g0t3QK" title="IMG_9867"><img src="https://live.staticflickr.com/65535/52767865169_e24461c4e8_b.jpg" width="1024" alt="IMG_9867" /></a></p>
-<p>潤發貨倉鄰近的德貞小學及基督教崇真中學，以及凱德苑需疏散。不遠處的西九龍法院大樓則如常運作，初選47人案繼續審訊。大火發生時正值午飯休庭時間，被告之一、民主黨黃碧雲在Facebook上載多張相片，可見煙霧密佈鄰近街道。</p>
+<p>潤發貨倉鄰近的德貞小學及基督教崇真中學等四間學校，以及凱德苑需疏散。不遠處的西九龍法院大樓則如常運作，初選47人案繼續審訊。大火發生時正值午飯休庭時間，被告之一、民主黨黃碧雲在<a href="https://www.facebook.com/photo?fbid=638442111424369&amp;set=pcb.638442244757689">Facebook 上載多張相片</a>，可見煙霧密佈鄰近街道。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0mG13rwJXS" title="IMG_9852 (2)"><img src="https://live.staticflickr.com/65535/52767839269_f2155f4f09_b.jpg" width="1024" alt="IMG_9852 (2)" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/hU094206Ax" title="IMG_9857"><img src="https://live.staticflickr.com/65535/52767064202_36c4c6fd46_b.jpg" width="1024" alt="IMG_9857" /></a></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/948SYy22d6" title="IMG_9864"><img src="https://live.staticflickr.com/65535/52767612691_f9bc2ec944_b.jpg" width="1024" alt="IMG_9864" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9Mv94Z665q" title="IMG_9859"><img src="https://live.staticflickr.com/65535/52767612831_981d42c506_b.jpg" width="1024" alt="IMG_9859" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/118m8h8J6D" title="IMG_9878"><img src="https://live.staticflickr.com/65535/52768076470_197f30461c_b.jpg" width="1024" alt="IMG_9878" /></a></p>
 <p>由華潤集團與華潤置地海外擁有的潤發倉庫，今年2月與政府達成補地價協議，金額為137.3億，每平方呎補地價8,692元。倉庫將連同旁邊的嘉里貨倉一併發展，項目由華潤、新地及嘉里合作，將重建為商住綜合項目（A/K20/132），興建7座不高於45層樓宇，涉及逾3,647個住宅單位，另有逾11萬平方呎商業樓面。2020年曾向<a href="https://www.info.gov.hk/tpb/tc/plan_application/A_K20_132.html">城規會</a>項目137.3億的補地價金額屬歷來第二高，僅次於新地西貢十四鄉項目的158.9億。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/o75r4S948o" title="螢幕截圖 2023-03-24 下午3.49.21"><img src="https://live.staticflickr.com/65535/52767061112_e5e5a01901_c.jpg" alt="螢幕截圖 2023-03-24 下午3.49.21" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/m1WK4JR8uX" title="螢幕截圖 2023-03-24 下午3.49.58"><img src="https://live.staticflickr.com/65535/52767599031_b2182486ef_c.jpg" width="800" alt="螢幕截圖 2023-03-24 下午3.49.58" /></a></p>
 </div></div></div>
