--- a/_posts/2023-03-26-INMEDIA-將軍澳反填海遊行-80人手拉封鎖線前行-警事前提醒勿有政治性言論.html
+++ b/_posts/2023-03-26-INMEDIA-將軍澳反填海遊行-80人手拉封鎖線前行-警事前提醒勿有政治性言論.html
@@ -17,6 +17,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/KB7F2V43Yw" title="無標題"><img src="https://live.staticflickr.com/65535/52771861179_9369b28d70.jpg" width="500" alt="無標題" /></a></p>
 <p><strong>居民批政府漠視民意  警事前檢查文宣及標語</strong></p>
 <p>遊行申請人、都會駅前業委會主席葉寶儀指，政府不應犧牲將軍澳居民的健康，在區內興建建築廢料處理設施、混凝土廠等6個厭惡性設施。將軍澳居民梁先生則批評政府漠視居民健康及民意，又強調自己是「處女下海」：「我本身係深藍嘅，今次我忍無可忍出嚟遊行！」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/526mezjY13" title="無標題"><img src="https://live.staticflickr.com/65535/52772091513_f938d82f97.jpg" width="500" alt="無標題" /></a><br /><em>遊行申請人、都會駅前業委會主席葉寶儀</em></p>
 <p>陳展浚透露，警方事前對標語、口號、參加者衣著等均有要求：「海報、宣傳牌、文宣，甚至屋苑發出的每一張通告，他們（警方）事前都看過」他指警方沒有否決遊行標語，但有提醒不要叫喊政治性言論。他相信警方是對首次遊行沒有信心，才作一系列嚴謹的要求，不希望成為慣例。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/k5LS5s55og" title="DSC_0002"><img src="https://live.staticflickr.com/65535/52772043563_6e0fbf8d56.jpg" width="500" alt="DSC_0002" /></a></p>
 <p><strong>有自稱業委會人士發信反對遊行  陳展浚斥行為垃圾</strong></p>
