--- a/_posts/2023-03-26-INMEDIA-禮賓府宴請土耳其地震搜救犬-李家超-氹到我個心好甜.html
+++ b/_posts/2023-03-26-INMEDIA-禮賓府宴請土耳其地震搜救犬-李家超-氹到我個心好甜.html
@@ -9,10 +9,10 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_518.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>行政長官李家超「宴請」曾到土耳其參與地震救災的兩隻消防搜救犬到禮賓府作客，並在社交網站Facebook 上載影片。影片可見，李家超在與搜救犬Twix 嬉戲時，牠顯得十分熱情，並撲向及親近對方。李家超笑得合不攏嘴，稱「氹到我個心好甜呀」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3nxS8E5z6p" title="338209969_925223608792904_32152380110785013_n"><img src="https://live.staticflickr.com/65535/52771834719_fcc96be565.jpg" width="500" alt="338209969_925223608792904_32152380110785013_n" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3nxS8E5z6p" title="338209969_925223608792904_32152380110785013_n"><img src="https://live.staticflickr.com/65535/52771834719_fcc96be565.jpg" width="500" alt="338209969_925223608792904_32152380110785013_n" /></a><br /><em>李家超 Facebook 圖片</em></p>
 <p>土耳其早前發生7.8級地震，本港派出59人搜救隊前往當地，成功救出4人。在搜救隊返港後，上月已獲李家超在禮賓府設午宴招待。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/jmT0WVZH94" title="337653249_585368419983033_1797456740633074433_n"><img src="https://live.staticflickr.com/65535/52771834789_111e48a045.jpg" width="500" alt="337653249_585368419983033_1797456740633074433_n" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/jmT0WVZH94" title="337653249_585368419983033_1797456740633074433_n"><img src="https://live.staticflickr.com/65535/52771834789_111e48a045.jpg" width="500" alt="337653249_585368419983033_1797456740633074433_n" /></a><br /><em>李家超 Facebook 圖片</em></p>
 <p>而消防處兩隻消防搜救犬Twix 及Umi ，同到土耳其當地救災，早前返港並完成檢疫程序。李家超隨即邀請「特別嘉賓」包括Twix、Umi及Umi 的姊姊Uma到禮賓府，並送上牠們最喜歡的零食作招待，稱答謝及表揚搜救犬，在救災任務中的付出及出色表現。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6nS35UPGoi" title="338181533_708855941030789_34915468822652552_n"><img src="https://live.staticflickr.com/65535/52771992555_0af0de63dd.jpg" width="500" alt="338181533_708855941030789_34915468822652552_n" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6nS35UPGoi" title="338181533_708855941030789_34915468822652552_n"><img src="https://live.staticflickr.com/65535/52771992555_0af0de63dd.jpg" width="500" alt="338181533_708855941030789_34915468822652552_n" /></a><br /><em>李家超 Facebook 圖片</em></p>
 <p>在影片中，李家超表示，自己曾飼養狗隻：「我以前都養過狗狗嘅，好開心嘅。」他更與搜救犬嬉戲，並拋予零食給牠們，笑得十分高興。在與Twix嬉戲時，李家超手持Twix的毛公仔，Twix 熱情親近對方。李家超更笑得見牙不見眼，稱「氹到我個心好甜呀」。</p>
 </div></div></div>
