--- a/_posts/2023-03-24-INITIUM-线下端小聚预告-一间远程深度新闻编辑部-的一些人-的台北夜聊.html
+++ b/_posts/2023-03-24-INITIUM-线下端小聚预告-一间远程深度新闻编辑部-的一些人-的台北夜聊.html
@@ -8,7 +8,7 @@ tags: blog
 author: 
 ---
 
-<p>「真正见到彼此时，我们在这些年这些年失去的、得到的，慢慢建起的联结和远距离带来的失真，也一齐涌现。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230325-membership-event-taiwan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/b9b2de33351945c5ba927da2355c0e7d.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「真正见到彼此时，我们在这些年失去的、得到的，慢慢建起的联结和远距离带来的失真，也一齐涌现。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230325-membership-event-taiwan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/b9b2de33351945c5ba927da2355c0e7d.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p>世界终于重新开放的这一刻，没有什么比见到每一个真实的人更让人激动的了；真正见到彼此时，我们在这些年这些年失去的、得到的，慢慢建起的联结和远距离带来的失真，也一齐涌现。丰富、五味杂陈。</p>
 <p>端成立近八年来，一直聚焦在广阔的、来自中港台和国际深度报导，想要帮助每个流动著的、对世界有好奇的人敲碎一点点阻碍。其实，持续、高密度的远距工作背后，端的很多同事们也只是“网友”。端传媒在台湾的同事们很希望能在这个春夏之交，与在台湾读者们畅谈一场。</p>
 <p>端的台湾报导，背后有著怎样的思考和策略，又会遇到怎样独特的挑战？当端的读者来自中港台和世界，我们怎样跨境合作、理解、互通有无？有著极其多元背景的编辑部，日常会有哪些令人莞尔的时刻吗？端想要创作和传达的“深度报导”、我们的会员制度，在今天，又会发生怎样的变化呢？</p>
