--- a/_posts/2023-03-25-PQ-蒲亭為戰侵家蕩產-習加強支持把俄當戰略靠山.html
+++ b/_posts/2023-03-25-PQ-蒲亭為戰侵家蕩產-習加強支持把俄當戰略靠山.html
@@ -16,7 +16,7 @@ author: 李 運理
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-1024x632.jpeg" alt="" class="wp-image-130893" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-1024x632.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-300x185.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-768x474.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-1536x948.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria.jpeg 1880w" sizes="(max-width: 585px) 100vw, 585px" /><figcaption>習近平訪俄，引發國際討論中俄兩國的權力流動。（圖／RIA）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-1024x632.jpeg" alt="" class="wp-image-130893" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-1024x632.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-300x185.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-768x474.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria-1536x948.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/ce2f306f-中俄簽訂協議@ria.jpeg 1880w" sizes="(max-width: 585px) 100vw, 585px" /><figcaption>習近平訪俄，引發國際討論中俄兩國的權力流動。（圖／RIA）</figcaption></figure></div>
 
 
 
